# agent_simulation_cpp

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  cmake_vcpkg_test.yml
include/: agent.h  agent_simulation.h  helper.h  resource.h  simulation.h  wall.h
src/: agent.cpp  agent_simulation.cpp  helper.cpp  resource.cpp  simulation.cpp  wall.cpp
